# object-detection-yolo

./: README.md
darknet_ros/darknet/data/: labels.rar
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
mtrackercar/: CMakeLists.txt  README.md  package.xml
mtrackercar/doc/: readme.txt
mtrackercar/include/mtrackercar/: Newton.hpp  Robot.hpp  Serial.hpp  rs232.h
mtrackercar/launch/: mtracker_demo.launch  mtracker_remote.launch
mtrackercar/resource/: TODO.txt
mtrackercar/scripts/: mtracker_env.sh
mtrackercar/src/: circular_trajectory.cpp  controller.cpp  mtracker_joy.cpp  mtrackercar.cpp  simulator.cpp
mtrackercar/srv/: Trigger.srv
teleop_twist_keyboard/: CMakeLists.txt  listener.py
